--- a/lower/package.json
+++ b/lower/package.json
@@ -23,6 +23,7 @@
     "@tsconfig/node20": "^20.1.4",
     "@types/node": "^20.16.11",
     "@vitejs/plugin-vue": "^5.1.4",
+    "@vitejs/plugin-vue-jsx": "^4.1.2",
     "@vue/tsconfig": "^0.5.1",
     "npm-run-all2": "^6.2.3",
     "postcss-px-to-viewport-8-plugin": "^1.2.5",
