--- a/lower/tsconfig.json
+++ b/lower/tsconfig.json
@@ -9,6 +9,8 @@
     }
   ],
   "compilerOptions": {
-    "types": ["element-plus/global"]
+    "types": ["element-plus/global"],
+    "jsxImportSource": "vue",
+    "jsx": "preserve"
   }
 }
